# SkyLineMergeGroup

./: .gitignore  CMakeLists.txt  main.cpp
workFiles/: height.txt  name.txt  quantity.txt  waste.csv  waste.txt  width.txt  x.txt  y.txt
